# authentification

./: .env.example  .gitignore  Cargo.toml  LICENSE  auth.db  prd.txt
.taskmaster/: config.json  state.json
.taskmaster/tasks/: tasks.json
migrations/: 001_initial.sql
src/: lib.rs  main.rs
src/config/: mod.rs
src/database/: connection.rs  mod.rs
src/docs/: mod.rs
src/errors/: mod.rs
src/handlers/: auth.rs  mod.rs
src/middleware/: auth.rs  mod.rs
src/models/: activity.rs  mod.rs  rate_limit.rs  session.rs  user.rs  verification.rs
src/services/: email.rs  jwt.rs  mod.rs  password.rs
src/utils/: mod.rs
